# maths

./: .rustfmt.toml  Cargo.toml
assets/: ideas.odt  measurements
assets/machines/: player.blend  player.blend1  player.glb
assets/map/: room_1.blend  room_1.blend1  room_1.glb  test_area.blend  test_area.blend1  test_area.glb
procedural_macros/: Cargo.toml
procedural_macros/src/: lib.rs
src/: areas.rs  creatures.rs  editor.rs  error_handling.rs  gather.rs  instantiate.rs  l_systems.rs  linear_transformations_2d.rs  lost.rs  machines.rs  main.rs  mind_control.rs  mouse.rs  physics.rs  render.rs  sync.rs
src/areas/: feathers.rs  start.rs  test_area.rs
src/creatures/: tester.rs
src/machines/: battery.rs  cable.rs  light.rs  outlet.rs  player.rs  power.rs  robot.rs
src/mouse/: drag.rs  selection.rs
src/physics/: scene.rs
