[package]
name = "maths"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "std",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
    "bevy_mesh_picking_backend",
    "bevy_dev_tools",
    "default_font",
    "zstd_c",
    "bevy_anti_alias",
    "bevy_post_process",
    "reflect_auto_register",
    "experimental_bevy_feathers",
    "bevy_input_focus",
    "debug",
    "track_location",
    "bevy_gizmos",
]}

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

